k8s/revalyze_landing-deployment.yaml
# landing_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revalyze-landing
  namespace: revalyze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: revalyze-landing
  template:
    metadata:
      labels:
        app: revalyze-landing
    spec:
      containers:
        - name: revalyze-landing
          image: nickglas/revalyze-landing:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
