k8s/cms-service.yaml
# cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revalyze-cms
  namespace: revalyze
spec:
  selector:
    app: revalyze-cms
  ports:
    - port: 80
      targetPort: 80
