k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: revalyze-landing
  namespace: revalyze
spec:
  gateways:
    - revalyze-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: revalyze-landing.revalyze.svc.cluster.local
            port:
              number: 80
